fix right align images

--- a/wp-content/themes/rebuild-foundation/src/sass/templates/_standard.scss
+++ b/wp-content/themes/rebuild-foundation/src/sass/templates/_standard.scss
@@ -13,8 +13,8 @@
 	}
 
 	img.alignright, figure.alignright{
-		margin: 0 (-$size__subnavigation) 0 0;
-		max-width: 70%;
+		margin: 0 (-$size__navigation) 0 0;
+		max-width: 80%;
 	}
 
 	article {
